[package]
name = "budgers"
version = "0.1.0"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
edition = "2018"

[dependencies]
strum = "0.19.2"
strum_macros = "0.19.2"
shrinkwraprs = "0.3.0"

[dependencies.bevy]
git = "https://github.com/emosenkis/bevy"
rev = "8c3f5c3758e9b3a4c9fd23472f9917dd9f0aa5da"
default_features = false
features = ["bevy_winit", "bevy_wgpu", "render", "png", "x11"]
