[package]
name = "budgers"
version = "0.1.0"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
edition = "2018"

[dependencies]
strum = "0.19.2"
strum_macros = "0.19.2"
shrinkwraprs = "0.3.0"
bevy_prototype_inline_assets = { git = "https://github.com/emosenkis/bevy_prototype_inline_assets", branch = "main" }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
default_features = false
features = ["bevy_winit", "bevy_wgpu", "render", "png", "x11"]
